2004-07-31  Stefan Jahn  <stefan@lkcc.org>

	* diode.cpp (Diode): Added flicker noise parameters to
	component properties.

2004-07-28  Stefan Jahn  <stefan@lkcc.org>

	* bjt.cpp (BJT): Added noise model parameters to the list
	of component properties.

2004-07-26  Stefan Jahn  <stefan@lkcc.org>

	* bjtsub.cpp (BJTsub), bjt.cpp (BJT): Added model parameters.

	* jfet.cpp (JFET): Added noise model parameters.

2004-07-12  Stefan Jahn  <stefan@lkcc.org>

	* sp_sim.cpp (SP_Sim): Inserting line break in component 
	description if necessary and senseful.

2004-07-04  Stefan Jahn  <stefan@lkcc.org>

	* resistor.cpp (Resistor): Added 'Temp' property.

2004-07-01  Stefan Jahn  <stefan@lkcc.org>

	* componentdialog.cpp (ComponentDialog): Allowing ',' to be
	typed into property dialogs (for equations).

2004-06-27  Stefan Jahn  <stefan@lkcc.org>

	* resistor.cpp (Resistor): Fixed typo in 'european'.

	* dc_sim.cpp (DC_Sim): Renamed 'showOPs' property into
	'saveOPs'.

2004-06-09  Stefan Jahn  <stefan@lkcc.org>

	* diode.cpp (Diode): Added 'Rs' and 'Tt' to diode parameters.
	Changed some parameter names as done in the simulator.

	* component.cpp (getComponentFromName): Made JFET component
	loadable.

2004-05-02  Stefan Jahn  <stefan@lkcc.org>

	* diode.cpp (Diode): Added more properties to the diode
	model.

2004-04-30  Michael Margraf  <michael.margraf@alumni.tu-berlin.de>

	* fixed behaviour of combo box in component dialog

2004-02-09  Stefan Jahn  <stefan@lkcc.org>

	* diode.cpp (Diode): Added new 'n' property to diode model.

2004-02-03  Stefan Jahn  <stefan@lkcc.org>

	* substrate.cpp, symtrafo.cpp, transformer.cpp: Fixed some
	typos in the property descriptions.

	* diode.cpp (Diode): Added 'Is' property to diode component.

2004-01-21  Stefan Jahn  <stefan@lkcc.org>

	* componentdialog.cpp:  Added translatable strings.