@@ -1,3 +1,8 @@
+2004-08-01  Stefan Jahn  <stefan@lkcc.org>
+
+	* diode.cpp (Diode): Added some more new component
+	properties.
+
 2004-07-31  Stefan Jahn  <stefan@lkcc.org>
 
 	* diode.cpp (Diode): Added flicker noise parameters to
